[gd_scene load_steps=32 format=2]

[ext_resource path="res://Levels/LevelAssets/RetractableSpikes/Spikes2.png" type="Texture" id=1]
[ext_resource path="res://Levels/LevelAssets/RetractableSpikes/Spikes1.png" type="Texture" id=2]
[ext_resource path="res://Levels/LevelAssets/RetractableSpikes/RetractSpikes.gd" type="Script" id=3]
[ext_resource path="res://Misc/Overlap/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/LevelAssets/RetractableSpikes/Spikes3.png" type="Texture" id=5]
[ext_resource path="res://Levels/LevelAssets/RetractableSpikes/Floor.png" type="Texture" id=6]
[ext_resource path="res://Shaders/Highlight.gdshader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=25]
shader = ExtResource( 7 )
shader_param/highlight_color = Color( 1, 1, 1, 1 )
shader_param/frequency = 0.35
shader_param/highlight_speed = 6.0
shader_param/highlight_width = 15.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0.458694, 14.4055 )

[sub_resource type="Animation" id=5]
resource_name = "0"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "3"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "0"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=10]
resource_name = "2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=11]
resource_name = "3"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=12]
resource_name = "0"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00933015 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=14]
resource_name = "2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=15]
resource_name = "3"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=17]
resource_name = "0"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite4:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite4:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=19]
resource_name = "2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite4:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=20]
resource_name = "3"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite4:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=21]
resource_name = "0"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite5:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=22]
resource_name = "1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite5:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=23]
resource_name = "2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite5:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=24]
resource_name = "3"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite5:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 5.36224, 31.7625 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite1:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1, 2.2, 2.8, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -27.9108, 38.6147 ), Vector2( -27.9108, 38.6147 ), Vector2( -27.911, 5.5 ), Vector2( -27.911, 5.5 ), Vector2( -27.9108, 38.6147 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.7, 1.8, 2.4, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -13.1725, 38.6273 ), Vector2( -13.1725, 38.6273 ), Vector2( -13.172, 5.5 ), Vector2( -13.172, 5.5 ), Vector2( -13.1725, 38.6273 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 1.3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.170692, 38.6273 ), Vector2( 0.170692, 38.6273 ), Vector2( 0.171, 5.5 ), Vector2( 0.171, 5.5 ), Vector2( 0.170692, 38.6273 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite4:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.2, 2.3, 2.9, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 13.6779, 38.6273 ), Vector2( 13.6779, 38.6273 ), Vector2( 13.678, 5.5 ), Vector2( 13.678, 5.5 ), Vector2( 13.6779, 38.6273 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite5:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 1.6, 2.2, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 28.1764, 38.6147 ), Vector2( 28.1764, 38.6147 ), Vector2( 28.176, 5.5 ), Vector2( 28.176, 5.5 ), Vector2( 28.1764, 38.6147 ) ]
}

[node name="RetractSpikes" type="StaticBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ -19.9474, 13.1112 ]
}

[node name="Sprite1" type="Sprite" parent="."]
material = SubResource( 25 )
position = Vector2( -27.9108, 38.6147 )
texture = ExtResource( 1 )
hframes = 4

[node name="HitBox1" parent="Sprite1" instance=ExtResource( 4 )]
visible = false
position = Vector2( -0.0112343, -15.472 )
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D" parent="Sprite1/HitBox1" index="0"]
position = Vector2( 0.0054121, 4.4055 )
shape = SubResource( 3 )

[node name="HitAnim" type="AnimationPlayer" parent="Sprite1"]
root_node = NodePath("../..")
anims/0 = SubResource( 5 )
anims/1 = SubResource( 4 )
anims/2 = SubResource( 6 )
anims/3 = SubResource( 7 )

[node name="Sprite2" type="Sprite" parent="."]
material = SubResource( 25 )
position = Vector2( -13.1725, 38.6273 )
texture = ExtResource( 2 )
hframes = 4

[node name="HitBox2" parent="Sprite2" instance=ExtResource( 4 )]
visible = false
position = Vector2( -0.0112343, -15.472 )
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D" parent="Sprite2/HitBox2" index="0"]
position = Vector2( 0.0054121, 4.4055 )
shape = SubResource( 3 )

[node name="HitAnim" type="AnimationPlayer" parent="Sprite2"]
root_node = NodePath("../..")
anims/0 = SubResource( 8 )
anims/1 = SubResource( 9 )
anims/2 = SubResource( 10 )
anims/3 = SubResource( 11 )

[node name="Sprite3" type="Sprite" parent="."]
material = SubResource( 25 )
position = Vector2( 0.170692, 38.6273 )
texture = ExtResource( 5 )
hframes = 4

[node name="HitBox3" parent="Sprite3" instance=ExtResource( 4 )]
visible = false
position = Vector2( -0.0112343, -15.472 )
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D" parent="Sprite3/HitBox3" index="0"]
position = Vector2( 0.0054121, 4.4055 )
shape = SubResource( 3 )

[node name="HitAnim" type="AnimationPlayer" parent="Sprite3"]
root_node = NodePath("../..")
anims/0 = SubResource( 12 )
anims/1 = SubResource( 13 )
anims/2 = SubResource( 14 )
anims/3 = SubResource( 15 )

[node name="Sprite4" type="Sprite" parent="."]
material = SubResource( 25 )
position = Vector2( 13.6779, 38.6273 )
texture = ExtResource( 2 )
hframes = 4

[node name="HitBox4" parent="Sprite4" instance=ExtResource( 4 )]
visible = false
position = Vector2( -0.0112343, -15.472 )
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D" parent="Sprite4/HitBox4" index="0"]
position = Vector2( 0.0054121, 4.4055 )
shape = SubResource( 3 )

[node name="HitAnim" type="AnimationPlayer" parent="Sprite4"]
root_node = NodePath("../..")
anims/0 = SubResource( 17 )
anims/1 = SubResource( 18 )
anims/2 = SubResource( 19 )
anims/3 = SubResource( 20 )

[node name="Sprite5" type="Sprite" parent="."]
material = SubResource( 25 )
position = Vector2( 28.1764, 38.6147 )
texture = ExtResource( 1 )
hframes = 4

[node name="HitBox5" parent="Sprite5" instance=ExtResource( 4 )]
visible = false
position = Vector2( -0.0112343, -15.472 )
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D" parent="Sprite5/HitBox5" index="0"]
position = Vector2( 0.0054121, 4.4055 )
shape = SubResource( 3 )

[node name="HitAnim" type="AnimationPlayer" parent="Sprite5"]
root_node = NodePath("../..")
anims/0 = SubResource( 21 )
anims/1 = SubResource( 22 )
anims/2 = SubResource( 23 )
anims/3 = SubResource( 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.464445, 7.37798 )
rotation = 1.57079
shape = SubResource( 16 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
reset_on_save = false
anims/Idle = SubResource( 2 )

[node name="Floor" type="Sprite" parent="."]
position = Vector2( -0.965332, 18.7058 )
z_index = 9
texture = ExtResource( 6 )

[connection signal="area_entered" from="Sprite1/HitBox1" to="." method="_on_HitBox1_area_entered"]
[connection signal="area_entered" from="Sprite2/HitBox2" to="." method="_on_HitBox2_area_entered"]
[connection signal="area_entered" from="Sprite3/HitBox3" to="." method="_on_HitBox3_area_entered"]
[connection signal="area_entered" from="Sprite4/HitBox4" to="." method="_on_HitBox4_area_entered"]
[connection signal="area_entered" from="Sprite5/HitBox5" to="." method="_on_HitBox5_area_entered"]

[editable path="Sprite1/HitBox1"]
[editable path="Sprite2/HitBox2"]
[editable path="Sprite3/HitBox3"]
[editable path="Sprite4/HitBox4"]
[editable path="Sprite5/HitBox5"]
